argo/cd/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  entrypoints:
  - http
  - https
  routes:
  - kind: Rule
    match: HostRegexp(`argocd.{domain:.+}`)
    priority: 10
    services:
    - name: argocd-server
      port: 80

  - kind: Rule
    #middlewares:
    #- name: basicauth
    match: HostRegexp(`argocd.{domain:.+}`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  #tls:
  #  certResolver: default
  #  options: {}
